--- a/index.html
+++ b/index.html
@@ -8,35 +8,34 @@
 </head>
 <body>
     <header>
-        <div id="logo">
-            <img src="img/logo.svg" alt="fluentify logo">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#">il metodo</a></li>
-                <li><a href="#">la tecnologia</a></li>
-                <li><a href="#">real-life english</a></li>
-                <li><a href="#">soluzione aziendali</a></li>
-            </ul>
-        </nav>
-        <div id="login-section">
-            <p>diventa un tutor</p>
-            <button class="login-button blue-button">login</button>
-            <button class="subription-button green-button">struttura un piano</button>
-        </div>
-        <div class="header-background">
-           <!--<div class="header-head">
-                <h1>Scegli l'inglese studiando per i professionisti</h1>
-                <button class="subription-button green-button">struttura un piano</button>
-            </div>-->
-            <div class="header-immage">
-                <img src="img/background-header.png" alt="english teacher">
+        <div class="container">
+            <div id="logo">
+                <img src="img/logo.svg" alt="fluentify logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">il metodo</a></li>
+                    <li><a href="#">la tecnologia</a></li>
+                    <li><a href="#">real-life english</a></li>
+                    <li><a href="#">soluzione aziendali</a></li>
+                </ul>
+            </nav>
+            <div id="login-section">
+                <p>diventa un tutor</p>
+                <button class="blue-button">login</button>
+                <button class="green-button">struttura un piano</button>
+            </div>
+            <div class="haeder-text">
+                <h1>Scegli l'inglese studiato<br>per i professionisti</h1>
+                <button>Struttura il tuo piano</button>
             </div>
         </div>
     </header>
     
     <main>
+        <section class="grey-section">
 
+        </section>
     </main>
 
     <footer>
