fixed some issue  about canceled css style

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
             </div>
         </div>
     </header>
-    
     <main>
         <section class="grey-section">
+            <div class="container">
 
+            </div>
         </section>
     </main>
 
