--- a/index.html
+++ b/index.html
@@ -34,9 +34,31 @@
     <main>
         <section class="grey-section">
             <div class="container">
-
+                <h2 >Le scuole di lingua tradizionali non sono efficienti</h2>
+                <h3 >Solo un corso incentrato sulla Fluency pu&oacute; portare ad una soluzione definitiva concreta.</h2>
+            </div>
+        </section>  
+        <section class="container">
+            <div class="info">
+                <img src="img/profile.svg" alt="">
+                <h2>Piano formativo configurato sul proprio livello</h2>
+                <hr>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae culpa eligendi blanditiis dolorem nulla repudiandae tenetur officiis, maxime consequuntur dolores eum ex, dolorum, reprehenderit voluptatibus explicabo voluptatum neque modi id.</p>
+            </div>
+            <div class="info">
+                <img src="img/computer.svg" alt="">
+                <h2>Affiancamento costante del tutor</h2>
+                <hr>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae culpa eligendi blanditiis dolorem nulla repudiandae tenetur officiis, maxime consequuntur dolores eum ex, dolorum, reprehenderit voluptatibus explicabo voluptatum neque modi id.</p>
+            </div>
+            <div class="info">
+                <img src="img/doc.svg" alt="">
+                <h2>Monitora i tuoi progressi costantemente</h2>
+                <hr>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae culpa eligendi blanditiis dolorem nulla repudiandae tenetur officiis, maxime consequuntur dolores eum ex, dolorum, reprehenderit voluptatibus explicabo voluptatum neque modi id.</p>
             </div>
         </section>
+        <hr>
     </main>
 
     <footer>
